--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@400;500;600;700&family=Open+Sans&family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cinzel&family=Epilogue:wght@400;500&family=Open+Sans&family=Poppins&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 * {
-  font-family: "Open Sans" !important;
+  font-family: "Open Sans";
+}
+
+.font-Cinzel {
+  font-family: "Cinzel";
 }
 /* Remove ScrollBar */
 ::-webkit-scrollbar {
@@ -92,4 +98,11 @@
   -webkit-text-fill-color: transparent;
   background-clip: text;
   text-fill-color: transparent;
+}
+
+.gradient-text {
+  background-image: linear-gradient(90deg, #e7c980 0%, #9e8253 100%);
+  color: transparent;
+  -webkit-background-clip: text; /* For older WebKit browsers like Safari */
+  background-clip: text;
 }
